--- a/informe/hito-1.html
+++ b/informe/hito-1.html
@@ -12,7 +12,7 @@
 <meta name="author" content="Catalina Carrasco, Javiera Donoso, Joaquín Herrera, Macarena Ríos, Nahuel Sanhueza" />
 
 
-<title>R Notebook</title>
+<title>Hito 1 - Minería de Datos CC5205</title>
 
 <script>// Pandoc 2.9 adds attributes on both header and div. We remove the former (to
 // be compatible with the behavior of Pandoc < 2.8).
